# recurse

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  go.mod  go.sum
.beads/: README.md  beads.jsonl  config.yaml  last-touched
.claude/: dp-config.yaml  settings.json
.claude/commands/: code-review.md  end-session.md  plan.md  start-session.md  test.md
.claude/hooks/: pre-compact.sh  session-start.sh
cmd/recurse/: main.go
docs/: RECOMMENDATIONS-FROM-RLM-CLAUDE-CODE.md  SPEC.md  benchmark-results.md
docs/design/: adaptive-depth.md  async-execution.md  circuit-breaker.md  confidence-weighted-synthesis.md  context-compression.md  context-evolution.md  continuous-learning.md  embedding-integration.md  execution-guarantees.md  formal-verification.md  lats-orchestration.md  learned-model-routing.md  memory-backend-abstraction.md  meta-evolution.md  modular-orchestrator.md  proactive-repl.md  prompt-caching.md  repl-plugin-system.md  task-classification.md  tree-of-thoughts.md  user-correction-learning.md
docs/performance/: memory-query-audit.md
docs/process/: code-review.md  planning.md  testing.md
docs/spec/: 00-overview.md  01-cli-entrypoint.md  02-tui-polish.md  03-continuous-learning.md  04-model-routing.md  05-context-compression.md  06-meta-evolution.md  07-budget-management.md  08-hallucination-detection.md  (+3 more)
pkg/python/: bootstrap.py  embedding_server.py  pyproject.toml  requirements-embeddings.txt  requirements.txt
pkg/python/.reasoning_logs/sessions/: 2026-01-10_1fa0c4d9.jsonl  2026-01-10_fa05f200.jsonl
(+496 files in other folders)
